fixed nav on mobile

--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ textarea:focus {
   }
 }
 
-@media (max-width: 360px) {
+@media (max-width: 430px) {
   section.content h1 {
     font-size: 25px;
   }
